turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:22: error: not found: value droie
  ligne();droie(90);recule(50);gauche(90);avance(75);maison(30);gauche(90);avance(150);droite(90);maison(30);avance(75);ligne();recule(50);recule(150);gauche(90);avance(75)
          ^